<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">银发无忧</string>
    <string name="app_ver">V1.0.150313</string>

    <integer name="vercode">10150313</integer>
    <integer name="vercode_ne">4</integer>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_board_">Main_board_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_blood_pressure_">Blood_pressure_Activity</string>
    <string name="blood_pressure_data">xx血压数据显示</string>
    <string name="blood_pressure_chart">血压数据图表显示</string>
    <string name="network_error">网络连接错误</string>
    <string name="blood_pressure_date">日期</string>
    <string name="blood_pressure_high">收缩压</string>
    <string name="blood_pressure_low">舒张压</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <!-- button -->

    <string name="button_next">下一步</string>
    <string name="button_top">上一步</string>
    <string name="button_no">退出</string>
    <string name="button_ok">确定</string>
    <string name="button_commit">提交</string>
    <string name="button_over">完成</string>

    <!-- 登录 -->
    <string name="login_title">登录</string>
    <string name="login_name">账号</string>
    <string name="login_name_ps">用户名</string>
    <string name="login_pass">密码</string>
    <string name="login_pass_ps">6-30位数字或字母</string>
    <string name="login_chick_text">一个月内免登录</string>
    <string name="login_forget_pass">忘记密码?</string>
    <string name="login_no">还没有账号，马上注册</string>
    <string name="login_pass_two">重复密码</string>
    <string name="login_email">Email</string>
    <string name="login_email_ps">Email</string>
    <string name="user_name">昵称</string>
    <string name="user_name_ps">美男</string>
    <string name="user_sax">性别</string>
    <string name="user_birthday">出生日期</string>
    <string name="user_hight">身高</string>
    <string name="user_whgit">体重</string>
    <string name="user_waist">腰围</string>
    <string name="user_device">型号</string>
    <string name="user_device_num">输入编码</string>
    <string name="user_vers">验证码</string>
    <string name="user_vers_ps">4位验证码</string>
    <string name="user_passwprd_too">请重复密码</string>

    <!-- 健康工具 -->
    <string name="utils_all">全部检测</string>
    <string name="utils_item1">体重指数</string>
    <string name="utils_item2">一分钟肥胖检测</string>
    <string name="utils_item3">标准体重计算器</string>
    <string name="utils_item4">运动心率</string>
    <string name="utils_item5">每日所需总热量</string>
    <string name="utils_item6">基础代谢计算</string>

    <!-- 我的 -->
    <string name="user_message_text">个人信息</string>
    <string name="user_message_photo">头像</string>
    <string name="user_device_text">设备管理</string>
    <string name="user_device_one">血压计</string>
    <string name="user_device_two">心率计</string>
    <string name="user_device_three">血糖仪</string>
    <string name="user_account_text">账号管理</string>
    <string name="user_account_name">账号</string>
    <string name="user_account_pass">修改密码</string>
    <string name="user_account_huan">切换账号</string>
    <string name="user_about_text">关于</string>
    <string name="user_about_feed">意见反馈</string>
    <string name="user_about_verson">版本号</string>
    <string name="user_about_update">版本更新</string>
    <string name="user_login_out">退出</string>
    <string name="utils_wight">\t\t体重指数计算器是体重与身高之比值,知道它很重要,可以了解你的健康情况,你的体重是不是标准体重、超重和肥胖等。您只需要输入身高与体重,即可计算出你的体重指数.</string>
    <string name="utils_1fenzhong">\t\t肥胖检测工具，输入您的身高和体重，可以帮您计算出您现在身体体重是否正常、是否肥胖。</string>
    <string name="utils_biaozhun">\t\t标准体重是反应和衡量一个人健康状况的重要标志之一。过胖和过瘦都不利于健康，也不会给人以健美感。不同体型的大量统计材料表明，反映正常体重较理想和简单的指标，可用身高体重的关系来表示。</string>
    <string name="utils_yundong">\t\t运动心率，即人体在运动时保持的心率状态。不管是有氧运动，还是无氧运动。都有一个合适的心率才能达到较佳的运动效果。</string>
    <string name="utils_reliang">\t\t每日所需总热量，即一个正常人每日所需的热量，和他的体重有关。每日摄取热量和体重比的关系，约为1千卡/小时，即4.186千焦/小时。</string>
    <string name="utils_jichudaixie">\t\t基础代谢(basal metabolism,BM)是指人体维持生命的所有器官所需要的最低能量需要。测定方法是在人体在清醒而又极端安静的状态下，不受肌肉活动、环境温度、食物及精神紧张等影响时的能量代谢率。</string>
    <string name="utils_all_mes">\t\t主要检测人的综合体质，如体重指数、标准体重、运动心率、每日所需总热量等。</string>
    <string name="about_us">\t\t此款软件是由银发无忧官方推出的一款智能健康版APP软件，用户测试血压、血糖时，测量设备将测量的数据发送到银发无忧APP软件，“银发无忧”对测量结果进行采集、存储、分析同步至云端，形成健康档案，自动生成趋势图表。用户通过APP软件随时随地了解自己及家人的身体状况。</string>
    <string name="register_ps">\t\t一.	总则
1.1 用户应当同意本协议的条款并按照页面上的提示完成全部的注册程序。用户在Wap进行注册程序的过程中，点击“同意按钮”按钮即表示用户与银发无忧公司达成协议，完全接受本协议项下的全部条款，
1.2 用户注册成功后，银发无忧将给予每个用户一个用户账号以及相应的密码，该用户账号和密码由用户负责保管；用户应当对以其用户账号进行的所有活动和事件负法律责任
1.3 银发无忧会员服务协议及服务条款和公告可由银发无忧公司随时更新，且无需另行通知。您在使用相关服务时，应关注并遵守其所适用的相关条款。
您在使用银发无忧提供的各项服务之前，应仔细阅读本服务协议。如您不同意本服务协议及随时对其修改内容，您可以主动取消银发无忧提供的服务；您一旦使用银发无忧服务，即视为您已了解并且完全同意本协议各项内容，包括银发无忧对服务协议随时所做的任何修改，并成为银发无忧用户。
二、注册信息和隐私保护
2.1 银发无忧账号（即银发无忧ID）的所有权归银发无忧，用户完成注册申请手续后，获得银发无忧账号的使用权。用户应提供及时、详尽及准确的个人资料，并不断更新注册资料，符合及时详尽准确的要求。所有原始键入的资料将引用为注册资料。如果因注册信息不真实而引起的问题，并对问题发生所带来的后果，银发无忧不负任何责任。
2.2 用户不应将其账号、密码转让、出售或出借予他人使用，若用户授权他人使用账户，应对被授权人在该账户下发生所有行为负全部责任。
2.3 银发无忧不对外公开或向第三方提供单个用户的注册资料，除非：
（1）事先获得用户的明确授权；
（2）只有透露你的个人资料，才能提供你所要求的产品和服务；
（3）根据相关的法律法规要求；
（4）按照相关政府部主管部门的要求；
（5）为维护银发无忧的合法权益。
2.4 在您注册银发无忧账户，使用其他银发无忧产品或服务，访问银发无忧网页，银发无忧会收集你的个人身份识别资料，并会将这些资料用户：改进为你提供的服务及网页内容。
三、使用规则
3.1 用户在使用银发无忧服务时，必须遵守中华人民共和国相关法律法规的规定，用户同意将不会利用本服务进行任何违法或不正当的活动，包括但不限于下列行为：
（1）上载、展示、张贴、传播或以其他方式传送有下列内容之一的信息：
1）违反对宪法所确定的基本原则的；
2）危害国家安全、泄露国家机密、颠覆国家政权、破坏国家统一的；
3）损害国家荣誉和利益的；
4）煽动民族仇恨、民族歧视、破坏民族团结的；
5）破坏国家宗教政策，宣扬邪教和封建迷信的；
6）散步谣言，扰乱社会秩序，破坏社会稳定的；
7）散步淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
8）侮辱或者诽谤他人，侵害他人合法权利的；
9）含有虚假、有害、胁迫、侵害他人隐私、骚扰、侵害、中上、粗俗、猥亵、或其他道德上令人反感的内容；
10）含有中国法律、法规、章程、条例以及任何具有法律效力之规范所限制的内容或禁止的其他内容；
（2）不得为任何非法目的而使用网络服务系统；
（3）不得 利用银发无忧服务从事以下活动：
1）未经允许，进入计算机信息网络或者使用计算机信息网络资源的；
2）未经允许，对计算机信息网络功能进行删除、修改或者增加的；
3）未经允许，对进入计算机信息网络中的存储、处理或者传输的数据和应用程序进行删除、修改或者增加的；
4）故意制作、传播计算机病毒等破坏性程序的；
5）其他危害计算机信息网络安全的行为。
3.2 用户违反本协议或者相关服务条款的规定，导致或者产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，您同意赔偿银发无忧与合作公司、关联公司，并使之免受损害。对此，银发无忧有权视用户的行为性质，采用包括但不限于删除用户发布信息内容、暂停使用许可、终止服务、限制使用、回收银发无忧账号、追究法律责任等措施。对恶意注册银发无忧账号或利用银发无忧账号进行非法活动、捣乱、骚扰、欺骗、其他用户以及其他违反本条例的行为，银发无忧有权回收其账号。同时，银发无忧公司会视司法部门的要求，协助调查。
3.3 用户不得对本服务任何部门或本服务之使用或获得，进行复制、拷贝、出售、转售或用户任何其他商业目的。
3.4 用户须对自己在使用银发无忧服务过程中的行为承担法律责任。用户承担法律的形式包括但不限于：对受到侵害者进行赔偿，以及在银发无忧公司首先承担了因用户行为导致的行政处罚或侵权损害赔偿责任后，用户应给予银发无忧公司等额的赔偿。
四、服务内容
4.1 银发无忧网络服务的具体内容由银发无忧公司根据实际情况提供。
4.2 除非本服务协议另有其他明示规定，银发无忧官方网所推出的新产品、新功能、新服务，均受到本服务协议之规范。
4.3 为使用本服务，您必须能够自行经有法律资格对您提供互联网接入服务的第三方，进行国际互联网，并应自行支付相关服务费用。此外，您必须自己配备及负责与国际互联网连线所需之一切必要的装备，包括计算机、数据机或其它存取装置。
4.4 鉴于网络服务的特殊性，用户同意银发无忧有权不经事先通知，随时变更、中断或终止部分或全部的网络服务（包括收费网络服务）。银发无忧不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也不作担保。
4.5 银发无忧需要定期或不定期地对提供网络服务的平台或相关的设备进行检修或者维护，如因此类情况而造成网络服务（包括收费网络服务）在合理时间内的中断，银发无忧无需为此承担任何责任、升级或其它目的暂停本服务任何部分的权利。
4.6 本服务或第三人可提供与其它国际互联网上之网站或资源之链接。由于银发无忧无法控制这些网站及资源，您了解并同意，此类网站或者资源是否可利用，银发无忧不予负责，存在或源于此类网站或资源之任何内容、广告、产品或其他资料，银发无忧亦不保证或者负责。因使用或者依赖任何此类网站或资源发布的货经由此类网站或资源获得的任何内容。商品或服务所产生的任何损害或损失，银发无忧不承担任何责任。
4.7 用户明确同意其使用银发无忧网络服务所存在的风险将完全由其自己承担。用户理解并接受下载或通过银发无忧服务取得的任何信息资料取决于用户自己，并由其承担系统受损、资料丢失以及其他任何风险。银发无忧对服务网上得到的任何商品购物服务、交易进程，都不做担保。
4.8  6个月未登陆的账号，银发无忧保留关闭的权利。
4.9 银发无忧有权于任何时间暂停或永久修改或终止本服务（或其任何部分），而无论其通知与否，银发无忧对用户和任何第三人均无需承担任何责任。
4.10 终止服务
您同意银发无忧得基于自行之考虑，因任何理由，包括但不限于长时间未使用，或银发无忧认为您已违反本服务协议的文字精神，终止您的密码、账号或本服务之使用（或服务之任何部分），并将您在本服务内的任何内容加以移除并删除。您同意依本服务协议任何规定提供之本服务，无需进行事先通知即可中断或终止，您承认并同意，银发无忧可立即关闭或删除您的账号及您账号中所有相关信息及文件，禁止继续使用前述文件或本服务。此外，您同意若本服务之使用被中断或终止您的账号及相关信息和文件被关闭或删除，银发无忧对您或任何第三人均不承担任何责任。
5.1服务的内容所有权
服务提供方提供的内容包括：文字、软件、声音、照片、、图表、录像、网页、广告中的全部内容；电子邮件中的全部内容；银发无忧APP为您提供的其它信息。所有这些信息均受版权、商标、标签和其它财产所有权法律主保护。未经相关权利人同意、上述资料均不得在任何媒体直接或间接发布，播放、出于播放或发布目的而改写或再发行；或者被用于其它商业用途而保存。网络的所有内容的版板归原文作者和服务提供方共同所有、任可人需要转载其内容、必须获得原文作者及服务提供方的明确授权。
6.1法律
本协议之效力、解释、执行和争议的解决均适用中华人民共和国之法律。如本协议之任何一部分与中华人民共和国法律抵触、则该部分条款应按有关法律规定重新解释、部分条款之无效或重新解释不影响其它条款之法律效力。您和服务提供方一致同意凡因本协议所产生的纠纷双方应协商解决、协商不成任何一方可提交服务提供方所在地法院诉讼裁决。
</string>

</resources>