<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_white"
    android:orientation="vertical" >

    <include layout="@layout/activity_main_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_top_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:layout_marginLeft="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="right"
            android:layout_marginRight="5dp"
            android:hint="@string/login_name_ps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        
        android:layout_marginRight="10dp"
        android:background="@drawable/login_bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/login_pass"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:password="true"
            android:gravity="right"
            android:layout_marginRight="5dp"
            android:hint="@string/login_pass_ps" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <CheckBox
            android:id="@+id/login_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_chick_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/login_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
            android:text="@string/login_forget_pass"
            android:textColor="@color/app_green" />
    </RelativeLayout>
    <Button 
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="45dp"
        android:text="@string/login_title"
        android:background="@drawable/button_bg"
        />
	<TextView
	    android:id="@+id/no_login_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login_no"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="200dp"
	    android:textColor="@color/app_green"
	    />
</LinearLayout>