<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:background="@color/app_white" >
    <include layout="@layout/activity_main_top"
        android:id="@+id/top"/>
    <LinearLayout
        android:id="@+id/namelayout"
        android:layout_width="match_parent"
        android:layout_below="@id/top"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_top_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pending_left"
            android:text="旧密码"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/change_oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="right"
            android:inputType="textPassword"
            android:layout_marginRight="@dimen/pending_left"
            android:hint="@string/login_pass_ps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/passwordLayout2"
        android:layout_below="@id/namelayout"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_middle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pass"
            android:layout_marginLeft="@dimen/pending_left"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/change_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="right"
            android:inputType="textPassword"
            android:layout_marginRight="7dp"
            android:hint="@string/login_pass_ps" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/passwordLayout2"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pass_two"
            android:layout_marginLeft="@dimen/pending_left"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/change_newpass_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="right"
            android:inputType="textPassword"
            android:layout_marginRight="7dp"
            android:hint="@string/user_passwprd_too" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        >
        <Button 
            android:id="@+id/commit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textColor="@color/app_white"
            android:layout_marginRight="15dp"
            android:text="@string/button_ok"
            android:background="@drawable/button_select"
            />
        
    </LinearLayout>

</RelativeLayout>